[tool.poetry]
name = "leetcode"
version = "0.1.0"
description = "Solving leetcode for fun."
authors = ["David Rybar <davidrybar123@gmail.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
